--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -170,5 +170,39 @@
 
 
 @media screen and (min-width:426px) and (max-width:769px){
+    .info{
+        width: 500px;
+    }
+    #me{
+        width: 800px;
+        margin-top: -500px;
+    }
+    .pro{
+        margin-left: 60px;
+        width: 80%;
+    }
     
+}
+@media screen and (max-width:426px) {
+  .img2{
+    margin-left: 0px;
+    margin-top: 400px;
+  } 
+  .info1{
+    width: 80%;
+    margin-left: 30px;
+  } 
+   #me{
+    width: 900px;
+    margin-top: -500px;
+}
+.pro{
+    margin-left: 40px;
+    width: 90%;
+}
+#skil{
+    flex: none;
+}
+  
+
 }
