--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -204,7 +204,9 @@
     flex: none;
 }
 #but{
-    margin-left: 600px;
+    margin-right: 210px;
+    margin-left: 60px;
+    margin-top: 60px;
 }
 
 }
